unpackaged/main/default/objects/narvar__Narvar_Event__e/narvar__Narvar_Event__e.object-meta.xml
<CustomObject>
    <label>Narvar Event</label>
    <pluralLabel>Narvar Events</pluralLabel>
</CustomObject>