unpackaged/main/default/objects/narvar__Narvar_Event__e/fields/narvar__Carrier_Name__c.field-meta.xml
<CustomField>
    <fullName>narvar__Carrier_Name__c</fullName>
    <label>Carrier Name</label>
    <length>128</length>
    <type>Text</type>
</CustomField>