unpackaged/main/default/objects/narvar__Narvar_Event__e/fields/narvar__Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>narvar__Contact_Email__c</fullName>
    <label>Contact Email</label>
    <length>128</length>
    <type>Text</type>
</CustomField>