unpackaged/main/default/objects/narvar__Narvar_Event__e/fields/narvar__Contact_Number__c.field-meta.xml
<CustomField>
    <fullName>narvar__Contact_Number__c</fullName>
    <label>Contact Number</label>
    <length>80</length>
    <type>Text</type>
</CustomField>