unpackaged/main/default/objects/narvar__Narvar_Event__e/fields/narvar__Delivery_Date__c.field-meta.xml
<CustomField>
    <fullName>narvar__Delivery_Date__c</fullName>
    <label>Delivery Date</label>
    <type>DateTime</type>
</CustomField>