unpackaged/main/default/objects/narvar__Narvar_Event__e/fields/narvar__Delivery_Status__c.field-meta.xml
<CustomField>
    <fullName>narvar__Delivery_Status__c</fullName>
    <label>Delivery Status</label>
    <length>80</length>
    <type>Text</type>
</CustomField>