unpackaged/main/default/objects/narvar__Narvar_Event__e/fields/narvar__Id__c.field-meta.xml
<CustomField>
    <fullName>narvar__Id__c</fullName>
    <label>Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>