unpackaged/main/default/objects/narvar__Narvar_Event__e/fields/narvar__Incident_Creation_Date__c.field-meta.xml
<CustomField>
    <fullName>narvar__Incident_Creation_Date__c</fullName>
    <label>Incident Creation Date</label>
    <type>DateTime</type>
</CustomField>