unpackaged/main/default/objects/narvar__Narvar_Event__e/fields/narvar__Is_Update__c.field-meta.xml
<CustomField>
    <fullName>narvar__Is_Update__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Update</label>
    <type>Checkbox</type>
</CustomField>