unpackaged/main/default/objects/narvar__Narvar_Event__e/fields/narvar__Narvar_Incident_Number__c.field-meta.xml
<CustomField>
    <fullName>narvar__Narvar_Incident_Number__c</fullName>
    <label>Narvar Incident Number</label>
    <length>128</length>
    <type>Text</type>
</CustomField>