unpackaged/main/default/objects/narvar__Narvar_Event__e/fields/narvar__Order_Number__c.field-meta.xml
<CustomField>
    <fullName>narvar__Order_Number__c</fullName>
    <label>Order Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>