unpackaged/main/default/objects/narvar__Narvar_Event__e/fields/narvar__Origin_Source__c.field-meta.xml
<CustomField>
    <fullName>narvar__Origin_Source__c</fullName>
    <description>Name of where incident source originated</description>
    <label>Origin Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>