unpackaged/main/default/objects/narvar__Narvar_Event__e/fields/narvar__Origin_URL__c.field-meta.xml
<CustomField>
    <fullName>narvar__Origin_URL__c</fullName>
    <description>URL address from originating incident</description>
    <label>Origin URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>