unpackaged/main/default/objects/narvar__Narvar_Event__e/fields/narvar__Subject__c.field-meta.xml
<CustomField>
    <fullName>narvar__Subject__c</fullName>
    <label>Carrier Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>