unpackaged/main/default/objects/narvar__Narvar_Event__e/fields/narvar__Tracking_Number__c.field-meta.xml
<CustomField>
    <fullName>narvar__Tracking_Number__c</fullName>
    <label>Tracking Number</label>
    <length>128</length>
    <type>Text</type>
</CustomField>